--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,47 +1,65 @@
 {
   "name": "@nubebytes/ui-react",
-  "version": "0.0.0",
-  "main": "index.js",
-  "typings": "index.d.ts",
-  "files": [
-    "dist",
-    "src"
-  ],
+  "version": "0.0.3",
+  "main": "./index.js",
+  "module": "./index.mjs",
+  "types": "./index.d.ts",
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
+  },
   "scripts": {
     "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prettier": "prettier --write ./src",
-    "build:cjs": "swc ./src -d ./dist --only ./src/**/*.ts --config-file .swcrc",
-    "build:dts": "tsc --declaration --declarationMap --emitDeclarationOnly && tsc-alias",
-    "build": "pnpm build:cjs && pnpm build:dts",
-    "release": "pnpm publish dist --no-git-checks --access=public"
+    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=16384' tsup --watch --silent",
+    "build": "tsup",
+    "prerelease": "copyfiles package.json LICENSE dist"
   },
   "peerDependencies": {
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@material-tailwind/react": "2.1.4",
-    "@swc/cli": "0.1.62",
-    "@swc/core": "1.3.96",
+    "@tiptap/extension-history": "^2.1.12",
+    "@types/copyfiles": "2.4.4",
     "@types/node": "20.9.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@vitejs/plugin-react-swc": "3.4.1",
+    "@vitejs/plugin-react": "4.2.0",
+    "autoprefixer": "10.4.16",
     "copyfiles": "2.4.1",
+    "cross-env": "7.0.3",
     "eslint-config-custom": "workspace:*",
-    "tsc-alias": "1.8.8",
+    "just-intersect": "4.3.0",
+    "postcss": "8.4.31",
+    "tailwind-scrollbar": "3.0.5",
+    "tailwindcss": "3.3.5",
+    "tailwindcss-animated": "1.0.1",
     "tsconfig": "workspace:*",
+    "tsup": "7.2.0",
     "typescript": "5.2.2",
     "vite": "4.5.0",
     "vite-plugin-checker": "0.6.2",
     "vite-tsconfig-paths": "4.2.1"
   },
   "dependencies": {
-    "@tldraw/tldraw": "2.0.0-alpha.17",
+    "@material-tailwind/react": "2.1.4",
+    "@tiptap/core": "2.1.12",
+    "@tiptap/extension-document": "2.1.12",
+    "@tiptap/extension-paragraph": "2.1.12",
+    "@tiptap/extension-text": "2.1.12",
+    "@tiptap/pm": "2.1.12",
+    "@tiptap/react": "2.1.12",
+    "@tldraw/tldraw": "2.0.0-alpha.18",
+    "framer-motion": "10.16.5",
     "jotai": "2.5.1",
     "lucide-react": "0.292.0",
+    "react-colorful": "5.6.1",
     "react-hook-form": "7.48.2",
     "react-hotkeys-hook": "4.4.1",
+    "react-merge-refs": "2.1.1",
+    "sonner": "1.2.3",
     "tailwind-merge": "2.0.0",
     "use-debounce": "10.0.0",
     "usehooks-ts": "2.9.1"
