--- a/packages/ui-react/tsconfig.json
+++ b/packages/ui-react/tsconfig.json
@@ -2,9 +2,13 @@
   "extends": "tsconfig/react/react-base.json",
   "include": ["src"],
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["*"]
-    }
-  }
+      "@/*": ["components/*"]
+    },
+    "outDir": "dist",
+    "allowJs": true,
+    "typeRoots": ["node_modules/@types", "src/**/types"]
+  },
+  "exclude": ["dist", "node_modules"]
 }
