--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -18,14 +18,14 @@
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@tiptap/extension-history": "^2.1.12",
     "@types/copyfiles": "2.4.4",
-    "@types/node": "20.9.0",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "20.10.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "4.2.0",
     "autoprefixer": "10.4.16",
     "copyfiles": "2.4.1",
@@ -33,6 +33,7 @@
     "eslint-config-custom": "workspace:*",
     "just-intersect": "4.3.0",
     "postcss": "8.4.31",
+    "postcss-import": "15.1.0",
     "tailwind-scrollbar": "3.0.5",
     "tailwindcss": "3.3.5",
     "tailwindcss-animated": "1.0.1",
@@ -53,7 +54,7 @@
     "@tiptap/react": "2.1.12",
     "@tldraw/tldraw": "2.0.0-alpha.18",
     "framer-motion": "10.16.5",
-    "jotai": "2.5.1",
+    "jotai": "2.6.0",
     "lucide-react": "0.292.0",
     "react-colorful": "5.6.1",
     "react-hook-form": "7.48.2",
