--- a/apps/storybook-angular/angular.json
+++ b/apps/storybook-angular/angular.json
@@ -24,8 +24,12 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["app/src/favicon.ico", "app/src/assets"],
-            "styles": ["app/src/styles.scss"],
-            "scripts": []
+            "styles": [
+              "app/src/styles.scss",
+              "./node_modules/@nubebytes/ui-angular/assets/styles.css"
+            ],
+            "scripts": [],
+            "allowedCommonJsDependencies": []
           },
           "configurations": {
             "production": {
@@ -111,9 +115,7 @@
     }
   },
   "cli": {
-    "schematicCollections": [
-      "@angular-eslint/schematics"
-    ],
+    "schematicCollections": ["@angular-eslint/schematics"],
     "analytics": false
   }
 }
