--- a/apps/storybook-angular/tsconfig.json
+++ b/apps/storybook-angular/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "tsconfig/angular/angular-base.json",
   "include": ["app/src", "storybook"],
   "compilerOptions": {
+    "jsx": "react-jsx",
     "baseUrl": "./app",
     "outDir": "./app/dist/out-tsc",
     "paths": {
