--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nubebytes/ui-react",
-  "version": "0.1.0",
+  "version": "0.3.4",
   "main": "./index.js",
   "module": "./index.mjs",
   "types": "./index.d.ts",
@@ -34,6 +34,7 @@
     "just-intersect": "4.3.0",
     "postcss": "8.4.31",
     "postcss-import": "15.1.0",
+    "postcss-prefix-selector": "1.16.0",
     "tailwind-scrollbar": "3.0.5",
     "tailwindcss": "3.3.5",
     "tailwindcss-animated": "1.0.1",
@@ -53,6 +54,7 @@
     "@tiptap/pm": "2.1.12",
     "@tiptap/react": "2.1.12",
     "@tldraw/tldraw": "2.0.0-alpha.18",
+    "deepmerge": "4.3.1",
     "framer-motion": "10.16.5",
     "jotai": "2.6.0",
     "lucide-react": "0.292.0",
