--- a/apps/storybook-angular/angular.json
+++ b/apps/storybook-angular/angular.json
@@ -24,12 +24,28 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["app/src/favicon.ico", "app/src/assets"],
-            "styles": ["app/src/styles.scss"],
-            "scripts": [],
-            "allowedCommonJsDependencies": []
+            "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "app/src/styles.scss"
+            ],
+            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js"],
+            "allowedCommonJsDependencies": [],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -41,8 +57,7 @@
                   "maximumWarning": "2kb",
                   "maximumError": "4kb"
                 }
-              ],
-              "outputHashing": "all"
+              ]
             },
             "development": {
               "buildOptimizer": false,
