--- a/apps/storybook-angular/package.json
+++ b/apps/storybook-angular/package.json
@@ -1,11 +1,10 @@
 {
   "name": "storybook-angular",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.15",
   "scripts": {
     "ng": "ng",
-    "dev": "pnpm start --configuration development",
-    "start": "ng serve --open --port 5001",
+    "start": "ng serve --open --port 5001 --configuration development",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint",
@@ -24,6 +23,7 @@
     "@angular/router": "16.2.11",
     "@ngneat/falso": "7.1.1",
     "@nubebytes/ui-angular": "workspace:*",
+    "bootstrap": "5.3.2",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
     "zone.js": "~0.13.3"
