--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nubebytes/ui-react",
-  "version": "0.7.4",
+  "version": "0.12.0",
   "main": "./index.js",
   "module": "./index.mjs",
   "types": "./index.d.ts",
@@ -22,10 +22,10 @@
   },
   "devDependencies": {
     "@types/copyfiles": "2.4.4",
-    "@types/node": "20.10.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "4.2.0",
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.39",
+    "@types/react-dom": "18.2.17",
+    "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.16",
     "copyfiles": "2.4.1",
     "cross-env": "7.0.3",
@@ -35,17 +35,17 @@
     "postcss-import": "15.1.0",
     "postcss-prefix-selector": "1.16.0",
     "tailwind-scrollbar": "3.0.5",
-    "tailwindcss": "3.3.5",
+    "tailwindcss": "3.3.6",
     "tailwindcss-animated": "1.0.1",
     "tsconfig": "workspace:*",
     "tsup": "7.2.0",
     "typescript": "5.2.2",
     "vite": "4.5.0",
     "vite-plugin-checker": "0.6.2",
-    "vite-tsconfig-paths": "4.2.1"
+    "vite-tsconfig-paths": "4.2.2"
   },
   "dependencies": {
-    "@material-tailwind/react": "2.1.5",
+    "@material-tailwind/react": "2.1.6",
     "@tiptap/core": "2.1.13",
     "@tiptap/extension-document": "2.1.13",
     "@tiptap/extension-history": "2.1.13",
@@ -53,12 +53,12 @@
     "@tiptap/extension-text": "2.1.13",
     "@tiptap/pm": "2.1.13",
     "@tiptap/react": "2.1.13",
-    "@tldraw/tldraw": "2.0.0-alpha.18",
+    "@tldraw/tldraw": "2.0.0-alpha.19",
     "deepmerge": "4.3.1",
-    "framer-motion": "10.16.12",
+    "framer-motion": "10.16.16",
     "lucide-react": "0.294.0",
     "react-colorful": "5.6.1",
-    "react-hook-form": "7.48.2",
+    "react-hook-form": "7.49.1",
     "react-hotkeys-hook": "4.4.1",
     "react-merge-refs": "2.1.1",
     "sonner": "1.2.4",
