--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nubebytes/ui-react",
-  "version": "0.12.0",
+  "version": "0.14.0",
   "main": "./index.js",
   "module": "./index.mjs",
   "types": "./index.d.ts",
@@ -35,7 +35,7 @@
     "postcss-import": "15.1.0",
     "postcss-prefix-selector": "1.16.0",
     "tailwind-scrollbar": "3.0.5",
-    "tailwindcss": "3.3.6",
+    "tailwindcss": "3.4.0",
     "tailwindcss-animated": "1.0.1",
     "tsconfig": "workspace:*",
     "tsup": "7.2.0",
@@ -45,6 +45,10 @@
     "vite-tsconfig-paths": "4.2.2"
   },
   "dependencies": {
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/modifiers": "7.0.0",
+    "@dnd-kit/sortable": "8.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "@material-tailwind/react": "2.1.6",
     "@tiptap/core": "2.1.13",
     "@tiptap/extension-document": "2.1.13",
@@ -53,16 +57,16 @@
     "@tiptap/extension-text": "2.1.13",
     "@tiptap/pm": "2.1.13",
     "@tiptap/react": "2.1.13",
-    "@tldraw/tldraw": "2.0.0-alpha.19",
+    "@tldraw/tldraw": "2.0.0-beta.1",
     "deepmerge": "4.3.1",
     "framer-motion": "10.16.16",
-    "lucide-react": "0.294.0",
+    "lucide-react": "0.302.0",
     "react-colorful": "5.6.1",
-    "react-hook-form": "7.49.1",
+    "react-hook-form": "7.49.2",
     "react-hotkeys-hook": "4.4.1",
     "react-merge-refs": "2.1.1",
-    "sonner": "1.2.4",
-    "tailwind-merge": "2.1.0",
+    "sonner": "1.3.1",
+    "tailwind-merge": "2.2.0",
     "use-debounce": "10.0.0",
     "usehooks-ts": "2.9.1"
   }
