--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nubebytes/ui-react",
-  "version": "0.14.2",
+  "version": "0.15.0",
   "main": "./index.js",
   "module": "./index.mjs",
   "types": "./index.d.ts",
@@ -21,12 +21,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/color": "3.0.6",
     "@types/copyfiles": "2.4.4",
     "@types/node": "20.10.4",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.16",
+    "color": "4.2.3",
     "copyfiles": "2.4.1",
     "cross-env": "7.0.3",
     "eslint-config-custom": "workspace:*",
@@ -48,7 +50,6 @@
     "@dnd-kit/modifiers": "7.0.0",
     "@dnd-kit/sortable": "8.0.0",
     "@dnd-kit/utilities": "3.2.2",
-    "just-intersect": "4.3.0",
     "@material-tailwind/react": "2.1.6",
     "@tiptap/core": "2.1.13",
     "@tiptap/extension-document": "2.1.13",
@@ -60,6 +61,7 @@
     "@tldraw/tldraw": "2.0.0-beta.1",
     "deepmerge": "4.3.1",
     "framer-motion": "10.16.16",
+    "just-intersect": "4.3.0",
     "lucide-react": "0.302.0",
     "react-colorful": "5.6.1",
     "react-hook-form": "7.49.2",
