--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nubebytes/ui-react",
-  "version": "0.15.0",
+  "version": "0.16.1",
   "main": "./index.js",
   "module": "./index.mjs",
   "types": "./index.d.ts",
@@ -13,7 +13,7 @@
     "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prettier": "prettier --write ./src",
     "dev": "cross-env NODE_OPTIONS='--max-old-space-size=16384' tsup --watch --silent",
-    "build": "tsup",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=16384' tsup",
     "prerelease": "copyfiles package.json LICENSE dist"
   },
   "peerDependencies": {
